--- a/app/about.html
+++ b/app/about.html
@@ -44,10 +44,10 @@
           <div class="block-text">Архитектура здания выполнена в стиле «фьюжн» и сочетает в себе классические мотивы исторического центра Ростова-на-Дону с современным элегантным дизайном. В основу концепции положено совмещение различных высококачественных материалов, таких как кирпич ручной формовки и система вентилируемого фасада.</div>
         </div>
         <div class="grid_3 us-slider js-slider-cont">
-          <div class="slider-controls js-controls"><a class="c-arrow c-left"><</a>
+          <div class="slider-controls js-controls">
             <div class="numbers-cont">
               <ul class="numbers"></ul>
-            </div><a class="c-arrow c-right">></a>
+            </div>
           </div>
           <div class="js-us-slider"><img alt="" src="images/sliders/facades/1.jpg"><img alt="" src="images/sliders/facades/2.jpg"><img alt="" src="images/sliders/facades/3.jpg"><img alt="" src="images/sliders/facades/4.jpg"><img alt="" src="images/sliders/facades/5.jpg"><img alt="" src="images/sliders/facades/6.jpg"><img alt="" src="images/sliders/facades/7.jpg"><img alt="" src="images/sliders/facades/8.jpg"><img alt="" src="images/sliders/facades/9.jpg"><img alt="" src="images/sliders/facades/10.jpg"><img alt="" src="images/sliders/facades/11.jpg"><img alt="" src="images/sliders/facades/12.jpg">
           </div>
@@ -113,10 +113,10 @@
           </div>
         </div>
         <div class="grid_3 us-slider js-slider-cont">
-          <div class="slider-controls js-controls"><a class="c-arrow c-left"><</a>
+          <div class="slider-controls js-controls">
             <div class="numbers-cont">
               <ul class="numbers"></ul>
-            </div><a class="c-arrow c-right">></a>
+            </div>
           </div>
           <div class="js-us-slider"><img alt="" src="images/sliders/structure/1.jpg"><img alt="" src="images/sliders/structure/2.jpg"><img alt="" src="images/sliders/structure/3.jpg"><img alt="" src="images/sliders/structure/4.jpg"><img alt="" src="images/sliders/structure/5.jpg"><img alt="" src="images/sliders/structure/6.jpg">
           </div>
@@ -168,10 +168,10 @@
           </div>
         </div>
         <div class="grid_3 us-slider js-slider-cont">
-          <div class="slider-controls js-controls"><a class="c-arrow c-left"><</a>
+          <div class="slider-controls js-controls">
             <div class="numbers-cont">
               <ul class="numbers"></ul>
-            </div><a class="c-arrow c-right">></a>
+            </div>
           </div>
           <div class="js-us-slider"><img alt="" src="images/sliders/hall/1.jpg"><img alt="" src="images/sliders/hall/2.jpg"><img alt="" src="images/sliders/hall/3.jpg"><img alt="" src="images/sliders/hall/4.jpg"><img alt="" src="images/sliders/hall/5.jpg"><img alt="" src="images/sliders/hall/6.jpg"><img alt="" src="images/sliders/hall/7.jpg"><img alt="" src="images/sliders/hall/8.jpg">
           </div>
@@ -266,10 +266,10 @@
       <div data-popup="episode-photos" class="popup">
         <div class="js-popups-close popup-close"><span></span></div>
         <div class="us-slider js-slider-cont ajax-fotorama">
-          <div class="slider-controls js-controls"><a class="c-arrow c-left"><</a>
+          <div class="slider-controls js-controls">
             <div class="numbers-cont">
               <ul class="numbers"></ul>
-            </div><a class="c-arrow c-right">></a>
+            </div>
           </div>
           <div data-height="100%" data-fit="contain" data-maxheight="100%" class="js-us-slider"></div>
         </div>
