--- a/app/index.html
+++ b/app/index.html
@@ -44,8 +44,8 @@
           <div class="main-text">Современный<br>Комфортабельный жилой дом<br>В центре Ростова-на-Дону<br></div>
           <div class="subs">
             <div class="subs-cont">
-              <div class="sub-text"><a href="#" class="date">24.10.2015</a><br><a href="#" class="text">Запуск первой очереди строительства.</a></div>
-              <div class="sub-text"><a href="#" class="down-link">Правовая документация</a></div>
+              <div class="sub-text"><span class="date">24.10.2015</span><br><a href="#" class="text">Запуск первой очереди строительства.</a></div>
+              <div class="sub-text"><a href="#" class="icon-link"><i class="icon icon-file"></i> Правовая документация</a></div>
             </div>
           </div>
         </div>
