--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Крепостной</title>
-    <meta name="description" content="">
+    <title>Клубный дом «Крепостной 100»</title>
+    <meta name="description" content="Современный комфортабельный жилой дом в центре Ростова">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- build:css(.) styles/vendor.css-->
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts.html">Планировки</a></li>
             <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
             <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
+            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts.html">Контакты</a></li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="news.html" class="brd-link">Новости</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
