--- a/app/news.html
+++ b/app/news.html
@@ -28,6 +28,7 @@
             <li class="nav-li"><a href="layouts.html">Планировки</a></li>
             <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
             <li class="nav-li"><a href="company.html">Застройщик</a></li>
+            <li class="nav-li"><a href="news.html" class="active">Новости</a></li>
             <li class="nav-li"><a href="about.html#documents" class="active">Документы</a></li>
             <li class="nav-li"><a href="contacts.html">Контакты</a></li>
           </ul>
@@ -64,7 +65,7 @@
       </li>
     </ul>
     <footer class="footer">
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="news.html" class="brd-link">Новости</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
