--- a/app/about.html
+++ b/app/about.html
@@ -20,16 +20,16 @@
   </head>
   <body class="about">
     <header class="header">
-      <div class="wrapper"> <a href="index.html" class="logo"></a>
+      <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-            <li class="nav-li"><a href="about.html" class="active">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
+            <li class="nav-li"><a href="about" class="active">О доме</a></li>
+            <li class="nav-li"><a href="location">Расположение</a></li>
+            <li class="nav-li"><a href="layouts">Планировки</a></li>
+            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+            <li class="nav-li"><a href="company">Застройщик</a></li>
+            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -49,7 +49,7 @@
               <ul class="numbers"></ul>
             </div>
           </div>
-          <div class="js-us-slider"><img alt="" src="images/sliders/facades/1.jpg"><img alt="" src="images/sliders/facades/2.jpg"><img alt="" src="images/sliders/facades/3.jpg"><img alt="" src="images/sliders/facades/4.jpg"><img alt="" src="images/sliders/facades/5.jpg"><img alt="" src="images/sliders/facades/6.jpg"><img alt="" src="images/sliders/facades/7.jpg"><img alt="" src="images/sliders/facades/8.jpg"><img alt="" src="images/sliders/facades/9.jpg"><img alt="" src="images/sliders/facades/10.jpg"><img alt="" src="images/sliders/facades/11.jpg"><img alt="" src="images/sliders/facades/12.jpg">
+          <div class="js-us-slider"><img alt="" src="images/slider_facades/1.jpg"><img alt="" src="images/slider_facades/2.jpg"><img alt="" src="images/slider_facades/3.jpg"><img alt="" src="images/slider_facades/4.jpg"><img alt="" src="images/slider_facades/5.jpg"><img alt="" src="images/slider_facades/6.jpg"><img alt="" src="images/slider_facades/7.jpg"><img alt="" src="images/slider_facades/8.jpg"><img alt="" src="images/slider_facades/9.jpg"><img alt="" src="images/slider_facades/10.jpg"><img alt="" src="images/slider_facades/11.jpg"><img alt="" src="images/slider_facades/12.jpg">
           </div>
         </div>
         <div class="clearfix"></div>
@@ -60,7 +60,7 @@
         <div class="us-title">Приемущества дома</div>
         <ul class="benefits">
           <li>
-            <div style="background-image: url(../images/benefits/panel.svg);" class="benefit-icon"></div>
+            <div style="background-image: url(images/benefits/panel.svg);" class="benefit-icon"></div>
             <div class="title">Технологии</div>
             <div class="text">
               Качественная отделка подъездов.
@@ -70,12 +70,12 @@
             </div>
           </li>
           <li>
-            <div style="background-image: url(../images/benefits/shar.svg);" class="benefit-icon"></div>
+            <div style="background-image: url(images/benefits/shar.svg);" class="benefit-icon"></div>
             <div class="title">МЕСТОПОЛОЖЕНИЕ</div>
             <div class="text">Пешеходная улица, развитая инфраструктура, отсутствие загруженных транспортных магистралей – вот главное в месторасположении нового жилого комплекса. Все необходимое находится в радиусе 500м. Это позволит вам больше времени посвятить семье, отдыху, друзьям. </div>
           </li>
           <li>
-            <div style="background-image: url(../images/benefits/kapitel.svg);" class="benefit-icon"></div>
+            <div style="background-image: url(images/benefits/kapitel.svg);" class="benefit-icon"></div>
             <div class="title">КАЧЕСТВЕННАЯ ОТДЕЛКА</div>
             <div class="text">
               Качественная отделка подъездов.
@@ -86,7 +86,7 @@
             </div>
           </li>
           <li>
-            <div style="background-image: url(../images/benefits/car.svg);" class="benefit-icon"></div>
+            <div style="background-image: url(images/benefits/car.svg);" class="benefit-icon"></div>
             <div class="title">ПАРКОВКА</div>
             <div class="text">
               Каждый желающий может купить машиноместо в подземном паркинге. Все въезды и выезды будут осуществляются по пропускам, что послужит гарантией целостности и сохранности вашего автомобиля.
@@ -118,7 +118,7 @@
               <ul class="numbers"></ul>
             </div>
           </div>
-          <div class="js-us-slider"><img alt="" src="images/sliders/structure/1.jpg"><img alt="" src="images/sliders/structure/2.jpg"><img alt="" src="images/sliders/structure/3.jpg"><img alt="" src="images/sliders/structure/4.jpg"><img alt="" src="images/sliders/structure/5.jpg"><img alt="" src="images/sliders/structure/6.jpg">
+          <div class="js-us-slider"><img alt="" src="images/slider_structure/1.jpg"><img alt="" src="images/slider_structure/2.jpg"><img alt="" src="images/slider_structure/3.jpg"><img alt="" src="images/slider_structure/4.jpg"><img alt="" src="images/slider_structure/5.jpg"><img alt="" src="images/slider_structure/6.jpg">
           </div>
         </div>
         <div class="clearfix"></div>
@@ -173,23 +173,23 @@
               <ul class="numbers"></ul>
             </div>
           </div>
-          <div class="js-us-slider"><img alt="" src="images/sliders/hall/1.jpg"><img alt="" src="images/sliders/hall/2.jpg"><img alt="" src="images/sliders/hall/3.jpg"><img alt="" src="images/sliders/hall/4.jpg"><img alt="" src="images/sliders/hall/5.jpg"><img alt="" src="images/sliders/hall/6.jpg"><img alt="" src="images/sliders/hall/7.jpg"><img alt="" src="images/sliders/hall/8.jpg">
+          <div class="js-us-slider"><img alt="" src="images/slider_hall/1.jpg"><img alt="" src="images/slider_hall/2.jpg"><img alt="" src="images/slider_hall/3.jpg"><img alt="" src="images/slider_hall/4.jpg"><img alt="" src="images/slider_hall/5.jpg"><img alt="" src="images/slider_hall/6.jpg"><img alt="" src="images/slider_hall/7.jpg"><img alt="" src="images/slider_hall/8.jpg">
           </div>
         </div>
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="us-block">
+    <div id="documents" class="us-block">
       <div class="container">
         <div class="grid_2">
           <div class="us-title">Документация</div>
           <ul class="documents-ul">
-            <li><a href="uploads/docs_1.jpg">Разрешение на строиcтельство.</a><span>JPG, 659 KB</span></li>
-            <li><a href="uploads/docs_2.jpg">Свидетельство о праве на земельный участок.</a><span>JPG, 659 KB</span></li>
-            <li><a href="uploads/docs_3.pdf">Проектная декларация.</a><span>PDF, 115 КВ</span></li>
-            <li><a href="uploads/docs_4.pdf">Договор долевого участия (образец).</a><span>PDF, 110 KB</span></li>
-            <li><a href="uploads/docs_5.jpg">Свидетельство о государственной регистрации юридического лица.</a><span>JPG, 81 KB</span></li>
-            <li><a href="uploads/docs_6.pdf">Аудиторское заключение.</a><span>JPG, 81 KB</span></li>
+            <li><a href="uploads/docs_1.jpg">Разрешение на строиcтельство</a><span> JPG, 260 KB</span></li>
+            <li><a href="uploads/docs_2.jpg">Свидетельство о праве на земельный участок</a><span> JPG, 708 KB</span></li>
+            <li><a href="uploads/docs_3.pdf">Проектная декларация</a><span> PDF, 3.9 MВ</span></li>
+            <li><a href="uploads/docs_4.pdf">Договор долевого участия (образец)</a><span> PDF, 138 KB</span></li>
+            <li><a href="uploads/docs_5.jpg">Свидетельство о государственной регистрации юридического лица</a><span> JPG, 364 KB</span></li>
+            <li><a href="uploads/docs_6.pdf">Аудиторское заключение</a><span> PDF, 5.1 MB</span></li>
           </ul>
         </div>
         <div class="grid_2">
@@ -208,7 +208,7 @@
             </ul>
             <div class="building"><img src="images/about/building.svg">
               <ul class="floors-blocks">
-                <li class="floor-item">
+                <li class="active floor-item">
                   <div class="left-part"></div>
                   <div class="right-part"></div>
                 </li>
@@ -247,7 +247,7 @@
               </ul>
             </div>
             <ul class="saled">
-              <li>&nbsp;</li>
+              <li>продан!&nbsp;</li>
               <li>продан!&nbsp;</li>
               <li>&nbsp;</li>
               <li>&nbsp;</li>
@@ -276,7 +276,7 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
