--- a/app/news.html
+++ b/app/news.html
@@ -20,16 +20,16 @@
   </head>
   <body class="news">
     <header class="header">
-      <div class="wrapper"> <a href="index.html" class="logo"></a>
+      <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html" class="active">Новости</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
+            <li class="nav-li"><a href="about">О доме</a></li>
+            <li class="nav-li"><a href="location">Расположение</a></li>
+            <li class="nav-li"><a href="layouts">Планировки</a></li>
+            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+            <li class="nav-li"><a href="company">Застройщик</a></li>
+            <li class="nav-li"><a href="news" class="active">Новости</a></li>
+            <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -39,32 +39,22 @@
     </div>
     <ul class="news-ul">
       <li class="news-li">
-        <div style="background-image: url(images/tmp/news1.jpg);" class="news-poster"></div>
         <div class="news-info">
-          <div class="date">23 Сентября 2014</div>
-          <div class="title">НАЧАЛИСЬ ПРОДАЖИ КВАРТИР ВО ВТОРОЙ ОЧЕРЕДИ</div>
-          <div class="text">Вторая очередь находится в процессе строительства, так что сейчас купить квартиру можно по самой выгодной цене. Поторопитесь, чем выше становится  «Большой», тем выше стоимость квадратного метра. Строительство ведется  при финансовой поддержке «Сбербанка», что гарантирует надежность ваших вложений!</div>
+          <div class="date">20 ноября 2014</div>
+          <div class="title">Проданы 2 квартиры</div>
+          <div class="text">На текущем этапе строительства дома можно купить квартиру по самой выгодной цене. Поторопитесь, чем выше становится «Крепостной, 100», тем выше стоимость квадратного метра. Строительство ведется при финансовой поддержке банков партнеров «Сбербанка», «ВТБ24» и «Центр-Инвест», что гарантирует надежность ваших вложений.</div>
         </div>
       </li>
       <li class="news-li">
-        <div style="background-image: url(images/tmp/news2.jpg);" class="news-poster"></div>
         <div class="news-info">
-          <div class="date">23 Сентября 2014</div>
-          <div class="title">НАЧАЛИСЬ ПРОДАЖИ КВАРТИР ВО ВТОРОЙ ОЧЕРЕДИ</div>
-          <div class="text">Вторая очередь находится в процессе строительства, так что сейчас купить квартиру можно по самой выгодной цене. Поторопитесь, чем выше становится  «Большой», тем выше стоимость квадратного метра. Строительство ведется  при финансовой поддержке «Сбербанка», что гарантирует надежность ваших вложений!</div>
-        </div>
-      </li>
-      <li class="news-li">
-        <div style="background-image: url(images/tmp/news3.jpg);" class="news-poster"></div>
-        <div class="news-info">
-          <div class="date">23 Сентября 2014</div>
-          <div class="title">НАЧАЛИСЬ ПРОДАЖИ КВАРТИР ВО ВТОРОЙ ОЧЕРЕДИ</div>
-          <div class="text">Вторая очередь находится в процессе строительства, так что сейчас купить квартиру можно по самой выгодной цене. Поторопитесь, чем выше становится  «Большой», тем выше стоимость квадратного метра. Строительство ведется  при финансовой поддержке «Сбербанка», что гарантирует надежность ваших вложений!</div>
+          <div class="date">18 сентября 2014</div>
+          <div class="title">Получено разрешение на строительство</div>
+          <div class="text">Получено разрешение на строительство дома от департамента архитектуры и градостроительства города Ростова-на-Дону.</div>
         </div>
       </li>
     </ul>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
