--- a/app/company.html
+++ b/app/company.html
@@ -20,16 +20,16 @@
   </head>
   <body class="company">
     <header class="header">
-      <div class="wrapper"> <a href="index.html" class="logo"></a>
+      <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html" class="active">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
+            <li class="nav-li"><a href="about">О доме</a></li>
+            <li class="nav-li"><a href="location">Расположение</a></li>
+            <li class="nav-li"><a href="layouts">Планировки</a></li>
+            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+            <li class="nav-li"><a href="company" class="active">Застройщик</a></li>
+            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -44,7 +44,7 @@
           <p>Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.</p>
         </div>
         <ul class="documents-ul">
-          <li><a href="#">Устанвной документ.</a><span>JPG, 659 KB</span></li>
+          <li><a href="#" class="disabled">Уставной документ</a><span> JPG, 659 KB</span></li>
         </ul><a href="http://stroikov-group.ru/" target="_blank" class="company-link"></a>
       </div>
       <div class="grid_1">
@@ -57,14 +57,14 @@
             <p>р/с 40702810300050000057</p>
             <p>в Ростовском филиале ОАО «АктивКапитал Банк»</p>
             <p>БИК 046029310</p>
-            <p>к/с 30101810300000000310 в РКЦ г. Азов</p>
+            <p>к/с 30101810300000000310 в РКЦ<br>г. Азов</p>
           </div>
         </div>
       </div>
       <div class="clearfix"></div>
     </div>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
