--- a/app/contacts.html
+++ b/app/contacts.html
@@ -20,16 +20,16 @@
   </head>
   <body class="contacts">
     <header class="header">
-      <div class="wrapper"> <a href="index.html" class="logo"></a>
+      <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="contacts.html" class="active">Контакты</a></li>
+            <li class="nav-li"><a href="about">О доме</a></li>
+            <li class="nav-li"><a href="location">Расположение</a></li>
+            <li class="nav-li"><a href="layouts">Планировки</a></li>
+            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+            <li class="nav-li"><a href="company">Застройщик</a></li>
+            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="contacts" class="active">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -61,7 +61,7 @@
     </div>
     <div id="contacts_map" class="contacts-map"></div>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
