--- a/app/index.html
+++ b/app/index.html
@@ -20,16 +20,16 @@
   </head>
   <body class="index">
     <header class="header main-header">
-      <div class="wrapper"> <a href="index.html" class="logo"></a>
+      <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
+            <li class="nav-li"><a href="about">О доме</a></li>
+            <li class="nav-li"><a href="location">Расположение</a></li>
+            <li class="nav-li"><a href="layouts">Планировки</a></li>
+            <li class="nav-li"><a href="mortgage">Ипотека</a></li>
+            <li class="nav-li"><a href="company">Застройщик</a></li>
+            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
         </nav>
       </div>
@@ -44,15 +44,15 @@
           <div class="main-text">Современный<br>Комфортабельный жилой дом<br>В центре Ростова-на-Дону<br></div>
           <div class="subs">
             <div class="subs-cont">
-              <div class="sub-text"><span class="date">24.10.2015</span><br><a href="#" class="text">Запуск первой очереди строительства.</a></div>
-              <div class="sub-text"><a href="#" class="icon-link"><i class="icon icon-file"></i> Правовая документация</a></div>
+              <div class="sub-text"><span class="date">20.11.2014</span><br><a href="news" class="text">Проданы 2 квартиры</a></div>
+              <div class="sub-text"><a href="about#documents" class="icon-link"><i class="icon icon-file"></i> Правовая документация</a></div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <footer class="footer">
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="#" class="brd-link">Правовые документы</a><span class="fl-r">Разработано агентством <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
+      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
